# prime-factor

./: Cargo.toml  README.md  deny.toml  justfile
benches/: bench_reikna.rs  benchmark.rs
prime-factor/: Cargo.toml
prime-factor/benches/: benchmark.rs
prime-factor/src/: lib.rs  main.rs
prime-factor/tests/: test.rs
src/: candidates.rs  lib.rs  main.rs
tests/: test.rs
