[package]
name = "prime-factor"
description = "A prime number factorizer written in Rust"
version = "0.6.1"
authors = ["Stefan Lindblad <stefan.lindblad@linux.com>"]
license = "LGPL-2.1-or-later"
edition = "2021"
repository = "https://github.com/Fairglow/prime-factor.git"
readme = "README.md"

[lib]
name = "primefactor"
path = "src/lib.rs"

[[bin]]
name = "prime-factor"
path = "src/main.rs"

[[bench]]
name = "prime-factor-benchmark"
path = "benches/benchmark.rs"
harness = false

[dependencies]
clap = "4.5"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"

[dev-dependencies]
criterion = "0.5"
rand = "0.9"
reikna = "0.12"

[profile.release]
codegen-units = 1
lto = true
