[package]
name = "prime-factor"
description = "A prime number factorizer written in Rust"
version = "0.7.0"
authors = ["Stefan Lindblad <stefan.lindblad@linux.com>"]
license = "LGPL-2.1-or-later"
edition = "2024"
homepage = "https://github.com/Fairglow/prime-factor"
repository = "https://github.com/Fairglow/prime-factor.git"
readme = "README.md"

[lib]
name = "primefactor"
path = "src/lib.rs"

[[bin]]
name = "prime-factor"
path = "src/main.rs"
required-features = ["cli"]

[[bench]]
name = "prime-factor-benchmark"
path = "benches/benchmark.rs"
harness = false

[[bench]]
name = "bench-reikna"
path = "benches/bench_reikna.rs"
harness = false
required-features = ["bench-reikna"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:log", "dep:env_logger", "dep:rayon"]
bench-reikna = []

[dependencies]
clap = { version = "4.5", optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }
rayon = { version = "1.11", optional = true }

[dev-dependencies]
criterion = "0.8"
rand = "0.10"
rayon = "1.11"
reikna = "0.12"

[profile.release]
codegen-units = 1
lto = true
